--- a/src/App.css
+++ b/src/App.css
@@ -115,6 +115,9 @@ h1 {
 	border-radius: 5px;
 	background-color: black;
 }
+.card.relative {
+	position: relative;
+}
 .card:hover {
 	border-bottom: 8px solid black;
 	box-shadow: rgba(0, 0, 0, 0.8) 0px 0px 15px;
@@ -271,20 +274,30 @@ h1 {
 }
 
 .btn-favoris {
-	width: 50px;
-	height: 50px;
-	background-color: red;
+	width: 60px;
+	height: 60px;
 	position: absolute;
-	right: 0;
+	top: 10px;
+	right: 10px;
 	cursor: pointer;
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
-.btn-favoris2 {
-	width: 50px;
-	height: 50px;
-	background-color: blue;
-	position: absolute;
-	right: 0;
-	cursor: pointer;
+.btn-favoris:hover .icone-fav {
+	color: #ed1d24;
+}
+.btn-favoris.active:hover .icone-fav {
+	/* color: #fff; */
+}
+.icone-fav {
+	color: #fff;
+	font-size: 35px;
+}
+
+.icone-fav.active {
+	color: #ed1d24;
 }
 
 .container-favoris {
