--- a/src/App.css
+++ b/src/App.css
@@ -292,6 +292,10 @@ h1 {
 	/* color: #fff; */
 }
 .icone-fav {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	cursor: pointer;
 	color: #fff;
 	font-size: 35px;
 }
