--- a/src/App.css
+++ b/src/App.css
@@ -274,27 +274,26 @@ h1 {
 }
 
 .btn-favoris {
-	width: 60px;
-	height: 60px;
+	/* width: 60px;
+	height: 60px; */
+	/* padding: 0 10px 10px 10px; */
 	position: absolute;
+	box-sizing: border-box;
 	top: 10px;
 	right: 10px;
 	cursor: pointer;
-	border-radius: 50%;
-	display: flex;
+
+	/* display: flex;
 	justify-content: center;
-	align-items: center;
+	align-items: center; */
 }
 .btn-favoris:hover .icone-fav {
 	color: #ed1d24;
 }
-.btn-favoris.active:hover .icone-fav {
-	/* color: #fff; */
-}
+/* .btn-favoris.active:hover .icone-fav {
+	color: #fff;
+} */
 .icone-fav {
-	position: absolute;
-	top: 10px;
-	right: 10px;
 	cursor: pointer;
 	color: #fff;
 	font-size: 35px;
@@ -302,6 +301,9 @@ h1 {
 
 .icone-fav.active {
 	color: #ed1d24;
+}
+.icone-fav.active:hover {
+	color: #fff;
 }
 
 .container-favoris {
