--- a/src/App.css
+++ b/src/App.css
@@ -32,22 +32,36 @@ h1 {
 	font-size: 22px;
 }
 .searchInput:hover {
-	border: nonce;
+	border: none;
 }
 
 .container {
 	max-width: 1200px;
 	margin: 0 auto;
 	font-family: "Lato", sans-serif;
+	padding: 0 20px;
 }
 .header-container {
-	height: 100px;
+	height: auto;
 	background-color: black;
+}
+
+@media (min-width: 850px) {
+	.header-container {
+		height: 100px;
+	}
 }
 
 .header-container .container {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	align-items: center;
+}
+
+@media (min-width: 850px) {
+	.header-container .container {
+		flex-direction: row;
+	}
 }
 
 .logo-container {
@@ -62,17 +76,28 @@ h1 {
 }
 
 .nav {
-	height: 100px;
 	display: flex;
 	flex: 1 1;
-	display: flex;
+	flex-wrap: wrap;
 	align-items: center;
 	flex-direction: row;
-	margin-left: 40px;
+	justify-content: center;
+	gap: 8px;
+	margin-bottom: 20px;
 }
-.nav-link {
-	margin-right: 25px;
+
+@media (min-width: 850px) {
+	.nav {
+		justify-content: start;
+		gap: 0;
+		margin-left: 40px;
+		margin-bottom: inherit;
+	}
+	.nav-link {
+		margin-right: 25px;
+	}
 }
+
 .nav-link button {
 	padding: 10px 25px;
 	font-family: "Lato", sans-serif;
@@ -93,7 +118,7 @@ h1 {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: space-around;
+	justify-content: space-between;
 	gap: 25px;
 	margin-top: 25px;
 	text-align: center;
@@ -109,7 +134,7 @@ h1 {
 }
 .card {
 	border-bottom: 8px solid #ed1d24;
-	width: 280px;
+	/* width: 280px; */
 	height: auto;
 	transition: all 0.3s ease-in;
 	border-radius: 5px;
@@ -157,10 +182,12 @@ h1 {
 }
 
 .card.large .picture {
-	width: 50%;
+	width: 100%;
 	height: 350px;
-	margin-top: 50px;
-	border-radius: 10px;
+	/* margin-top: 50px; */
+	border-radius: 10px 10px 0 0;
+
+	object-position: middle;
 }
 
 .card.large.comic .picture {
@@ -248,6 +275,7 @@ h1 {
 
 .pagination {
 	display: flex;
+	flex-wrap: wrap;
 	margin: 50px 0;
 	justify-content: center;
 	align-items: center;
@@ -316,4 +344,17 @@ h1 {
 
 .container-character {
 	position: relative;
+	width: 100%;
+}
+
+@media (min-width: 500px) {
+	.container-character {
+		width: 46%;
+	}
+}
+
+@media (min-width: 850px) {
+	.container-character {
+		width: 31%;
+	}
 }
